# Toboggan

./: .gitignore  .pylintrc  .travis.yml  README.md  actions.py  pyproject.toml  requirements.txt  server.py
gui/: index.html  styles.css
toboggan/: actions.json  actions.py  calvin_and_hobbes.py  character_generation.py  game_class.py  game_components.py  gpt2.py  gpt2_fake.py  noun_key.py  room_generator.py  server.ini  server.py  setting.py  skill-Actions.json  text_generators.py  watson_action_mapper.py
toboggan/gui/: index.html  main.js  styles.css
